# intra-trading-system-dynamic

./: .gitignore  .mcp.json  CLAUDE.md  PROGRESS.md  organize_results.py  pyproject.toml  transcripts_1.txt  transcripts_2.txt  transcripts_3.txt
.claude/: settings.local.json
config/: features.yaml  models.yaml  risk.yaml  targets.yaml
data_pipelines/: __init__.py  news_sentiment.py  sec_filings.py
docs/: ARCHITECTURE.md  CLAUDE.md  experiments.md  monitoring-plan.md  quantconnect-api-reference.md  trading_concepts_summary.md
docs/offline-articles/: RESEARCH_SYNTHESIS_MARCH_2026.md
from claude/: StrategyBrief_SupportZoneBounce.md  SupportZoneBounce.py
logsfromquant/: logs_congress_15_2_2026_1812.txt  logs_sentiment_50_15_2_2026_1922.txt
mcp_servers/paper_search/: requirements.txt  server.py
notebooks/01_data_exploration/: congressional_trades.ipynb
notebooks/02_feature_engineering/: feature_experiments.ipynb
notebooks/03_model_training/: lightgbm_directional.ipynb
notebooks/05_chart_reading/: chart_calculations.py  chart_reading_101.py
notebooks/05_weight_learning/: train_weights.py
notebooks/06_forex_pairs_research/: cointegration_results.csv  find_cointegrated_pairs.py
scripts/: setup-service-bus.sh  train-on-azure.sh  verify-data.sh
strategies/bond_momentum/: main_v1.py
strategies/combined_4strat_riskparity/: main_v1.py  main_v2.py  main_v3.py  main_v4.py  main_v5.py
training/: Dockerfile  requirements.txt  train_lightgbm.py  train_trade_classifier.py
utils/: __init__.py  data_loaders.py  evaluation.py  features.py  model_store.py
(+382 files in other folders)
